--- a/my-new-project/bower.json
+++ b/my-new-project/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-new-project",
+  "name": "resetpwd",
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.3.0",
@@ -15,5 +15,5 @@
     "angular-mocks": "^1.3.0"
   },
   "appPath": "app",
-  "moduleName": "myNewProjectApp"
+  "moduleName": "resetpwdApp"
 }
